  - add label selection "Task waypoints & airfields"
* user interface
  - replay fast-forward
  - green InfoBox distance when inside observation zone (#2560)
  - limit the InfoBox aspect ratio
  - new waypoint location editor (#343)
  - show required glide ratio in waypoint details (#1573)
  - new InfoBox style "Shaded" (#1852)
  - waypoint details button in target dialog (#1967)
* tasks
  - MAT tasks (#563)
  - custom symmetric quadrant (#2125)
  - AAT keyhole (#1687)
* devices
  - Volkslogger: support IGC file download (#1972)
* Android
  - faster map renderer on some Android devices

Version 6.5.3 - not yet released
* user interface
  - eliminate flickering in the cross section on Windows
* devices
  - FLARM: fix IGC file download on firmware 5.09 (#2619)
* Android
  - fix crash with Hebrew language

Version 6.5.2 - 2013/03/15
* user interface
  - fix hang during startup (#2662, #2663)
  - fix freeze in dialogs (#2664)
  - automatically re-enable manual wind controls (#2336)
  - fix crash after connecting FLARM (#2669)

Version 6.5.1 - 2013/03/12
* infoboxes
  - fix MacCready adjustment for non-metric units (#2654)
* user interface
  - fix bogus "restart XCSoar" messages
  - fix cross section render error on some OpenGL chips (#2631, #2661)
  - allow gestures in cross section (#2655)
* devices
  - fix crash in Android Bluetooth driver (#2636, #2656)
  - fix NMEA input on Android Bluetooth Server
* data files
  - use the terrain cache even when the system clock is wrong
  - fix G record regression (#2657)

Version 6.5 - 2013/03/08
* map
  - lower zoom levels possible while circling (#1120)
  - draw FAI triangle areas (#1563)
  - optimise the terrain renderer
  - added "Wind Up" display orientation
  - high-resolution terrain renderer (Android/Linux only)
  - kinetic panning (Android/Linux only)
  - new terrain color ramp "Gaudy"
* calculations
  - don't detect landing while climbing in a wave (#1330, #2289, #2406)
  - basic support for the contest "DMSt" (#2208)